--- a/package.json
+++ b/package.json
@@ -16,13 +16,23 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "sass": "^1.60.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
